# djangocms-mdeditor

./: CHANGES.md  MANIFEST.in  Pipfile  README.md  setup.cfg  setup.py
djangocms_mdeditor/: __init__.py  admin.py  apps.py  cms_plugins.py  fields.py  models.py  widgets.py
djangocms_mdeditor/migrations/: 0001_initial.py
djangocms_mdeditor/static/css/: ace-djangocms-fix.min.css
djangocms_mdeditor/templates/: render_text_plugin.html
