[metadata]
name = djangocms-mdeditor
version = 0.1alpha1
description = Text Plugin for django CMS using Martor for Markdown-enabled text-editing.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, markdown, django, addon, django-cms
url = https://github.com/danniranderis/djangocms-mdeditor
download_url = https://github.com/danniranderis/djangocms-mdeditor
author = Danni Randeris
author_email = danni@danniranderis.dk
maintainer = Danni Randeris
maintainer_email = danni@danniranderis.dk
license = MIT
platforms = Linux
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
;    Programming Language :: Python :: 3.7
;    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django CMS
;    Framework :: Django CMS 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.7
packages = find:
install_requires =
    django-cms>=3.9
    martor>=1.6.4